del polyv token

--- a/addons/polyv/polyv.html
+++ b/addons/polyv/polyv.html
@@ -81,7 +81,7 @@
             FilesAdded: function (up, files) {
                 var _option = {
                     'fcharset': 'ISO-8859-1',
-                    'writetoken': 'bcad4760-3b11-465e-b5d2-89442148e34d',
+                    'writetoken': 'a polyv token',
                     'cataid': $('#category_id').find("option:selected").attr('cataid'),
                     'JSONRPC': '{"title": "' + $('#title').val() + '", "tag": "' + $('#tag').val() + '", "desc": "' + $('#description').val() + '"}'
                 };
@@ -114,7 +114,7 @@
         },
         multipart_params: {
             'fcharset': 'ISO-8859-1',
-            'writetoken': 'bcad4760-3b11-465e-b5d2-89442148e34d',
+            'writetoken': 'a polyv token',
             'cataid': '1',
             'JSONRPC': '{"title": "标题", "tag": "标签", "desc": "描述"}'
         }
